--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<div id="container" style="width:1000px; margin:0 auto">
 		<h1 style="color:#E44CD9; text-align: center"><b>Hello everybody and welcome to my page</b></h1>
 		<h2 style="color:#E44CD9; text-align: center"><i>I hope you enjoy this small glimps into my life</i></h2>
-	
+			<p style="color:#E44CD9; text-align: center; text-size: 300%">This is me and my fiance, Wayne.<br><img src="images/parents2.jpg" alt="picture of a man and a woman"><br>We like to go to concerts together<br><video width="320" height="240" controls> <source src="videos/starsatnightedit.mp4" alt="Video of Rock Concert"></video></p>
 	
 	</div>
 
