--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 		<h1 style="color:#E44CD9; text-align: center">Hello everybody and welcome to my page</h1>
 		<h2 style="color:#E44CD9; text-align: center"><i>I hope you enjoy this small glimps into my life</i></h2>
 			<p style="color:#E44CD9; text-align: center; text-size: 300%">This is me and my fiance, Wayne.</p>
-			<img src="images/parents2.jpg" alt="picture of a man and a woman">
+			<center><img src="images/parents2.jpg" alt="picture of a man and a woman"></center>
 			<p style="color:#E44CD9; text-align: center; text-size: 300%">We like to go to concerts together</p>
-			<video width="320" height="240" controls src="videos/starsatnightedit.mp4" alt="Video of Rock Concert"></video>
+			<center><video width="320" height="240" controls src="videos/starsatnightedit.mp4" alt="Video of Rock Concert"></video></center>
+		
 	
 	</div>
 
