--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1 style="color:#E44CD9; text-align: center">Hello everybody and welcome to my page</h1>
 		<h2 style="color:#E44CD9; text-align: center"><i>I hope you enjoy this small glimps into my life</i></h2>
 			<p style="color:#E44CD9; text-align: center; text-size: 300%">This is me and my fiance, Wayne.</p>
-			<center><img src="images/us.jpg" alt="picture of a man and a woman"></center>
+			<center><img src="images/us.jpg" alt="picture of a man and a woman"/></center>
 			<p style="color:#E44CD9; text-align: center; text-size: 300%">We like to go to concerts together</p>
 			
 	
