one last change maybe

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<div id="container" style="width:1000px; margin:0 auto">
 		<h1 style="color:#E44CD9; text-align: center">Hello everybody and welcome to my page</h1>
 		<h2 style="color:#E44CD9; text-align: center"><i>I hope you enjoy this small glimps into my life</i></h2>
-			<p style="color:#E44CD9; text-align: center; text-size: 300%">This is me and my fiance, Wayne.</p>
+			<h3 style="color:#E44CD9; text-align: center; text-size: 300%">This is me and my fiance, Wayne.</h3>
 			<center><img src="images/us.jpg" alt="picture of a man and a woman"/></center>
-			<p style="color:#E44CD9; text-align: center; text-size: 300%">We like to go to concerts</p>
+			<h3 style="color:#E44CD9; text-align: center; text-size: 300%">We like to go to concerts</h3>
 			<center><video width="320" height="240" controls src="videos/starsatnightedit.mp4" alt="video of a rock concert"></video></center>
-			<p style="color:#E44CD9; text-align: center; text-size: 300%">and play video games together. One of our favorite video games to play is Dead by Daylight.</p>
+			<h3 style="color:#E44CD9; text-align: center; text-size: 300%">and play video games together. One of our favorite video games to play is Dead by Daylight.</h3>
 			<center><img src="images/dbd.jpg" alt="Dead by Daylight art"/></center>
-			<p style="color:#E44CD9; text-align: center; text-size: 300%">We have two absolutely amazing children.</p>
+			<h3 style="color:#E44CD9; text-align: center; text-size: 300%">We have two absolutely amazing children.</h3>
 			<center><img src="images/bige.jpg" alt="teenage boy smiling"/></center>
-			<p style="color:#E44CD9; text-align: center; text-size: 300%">We have so much fun together, playing games, making art, going on adventures and binge watching One Piece.</p>
+			<h3 style="color:#E44CD9; text-align: center; text-size: 300%">We have so much fun together, playing games, making art, going on adventures and binge watching One Piece.</h3>
 			<center><img src="images/littlee.jpg" alt="little girl with pink hair"/></center>
-			<p style="color:#E44CD9; text-align: center; text-size: 300%"> We also have an entire zoo of animals (not pictured).<br>These three people are my whole world, and the reason that I'm in school right now.<br>I want them to look at me and be proud, the way that I'm proud of each of them.</p>
+			<h3 style="color:#E44CD9; text-align: center; text-size: 300%"> We also have an entire zoo of animals (not pictured).<br>These three people are my whole world, and the reason that I'm in school right now.<br>I want them to look at me and be proud, the way that I'm proud of each of them.</h3>
 			
 	
 	</div>
