--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background-color:#610593">
 	<div id="container" style="width:1000px; margin:0 auto">
-		<h1 title="If you are reading this, you found my hidden message" style="color:antiquewhite; text-align: center">Hello everybody and welcome to my page</h1>
+		<h1 title="If you are reading this, you found my hidden message" style="color:antiquewhite; text-align: center"><b>Hello everybody and welcome to my page</b></h1>
 		<h2 style="color:antiquewhite; text-align: center"><i>I hope you enjoy this small glimpse into my life</i></h2>
 			<h3 style="color:antiquewhite; text-align: center; text-size: 300%">This is me and my fiance, Wayne.</h3>
 			<center><img src="images/us.jpg" alt="picture of a man and a woman"/></center>
